# chatgptcmdline

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs
