[package]
name = "chatgptcmdline"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest-eventsource = "0.4.0"
futures = "0.3"
